create average html

--- a/week-06/day4/src/main/resources/templates/averagestock.html
+++ b/week-06/day4/src/main/resources/templates/averagestock.html
@@ -18,23 +18,9 @@
     <a href="/most-expensive-available">MOST EXPENSIVE AVAILABLE</a>
 </div>
 
-<table>
-    <thead>
-    <th>Name</th>
-    <th>Description</th>
-    <th>Price</th>
-    <th>Quantity of stock</th>
-    </thead>
-    <tbody>
-    <tr th:each="item : ${items}">
-        <td th:text="${item.getName()}"></td>
-        <td th:text="${item.getDescription()}"></td>
-        <td th:text="${item.getPrice()} + 'Ft'"></td>
-        <td th:text="${item.getInStock()}"></td>
-    </tr>
-    </tbody>
+<p th:text="'Average stock: ' + ${average}">
 
-</table>
+</p>
 
 </body>
 </html>
