add search block

--- a/week-06/day4/src/main/resources/templates/averagestock.html
+++ b/week-06/day4/src/main/resources/templates/averagestock.html
@@ -18,6 +18,13 @@
     <a href="/most-expensive-available">MOST EXPENSIVE AVAILABLE</a>
 </div>
 
+<p>Search for:</p>
+
+<form>
+    <input type="search">
+    <input type="submit">
+</form>
+
 <p th:text="'Average stock: ' + ${average}">
 
 </p>
