--- a/week-06/day4/src/main/resources/templates/index.html
+++ b/week-06/day4/src/main/resources/templates/index.html
@@ -18,6 +18,15 @@
     <a href="/most-expensive-available">MOST EXPENSIVE AVAILABLE</a>
 </div>
 
+<p>Search for:</p>
+
+<form>
+    <input type="search">
+    <input type="submit">
+</form>
+
+
+
 <table>
     <thead>
     <th>Name</th>
@@ -35,6 +44,7 @@
     </tbody>
 
 </table>
+
 
 </body>
 </html>
