finish Extending more exercise

--- a/week-07/day2/bankofsimba/src/main/resources/templates/list.html
+++ b/week-07/day2/bankofsimba/src/main/resources/templates/list.html
@@ -11,12 +11,14 @@
 
 <table>
     <thead>
+    <th>Index</th>
     <th>Name</th>
     <th>Balance</th>
     <th>Animal Type</th>
     </thead>
     <tbody>
     <tr th:each="account: ${accountlist}">
+        <td th:text="${accountStat.index}"></td>
         <td th:text="${account.name}"></td>
         <td th:text="${account.balance}"></td>
         <td th:text="${account.animalType}"></td>
