--- a/week-07/day5/src/main/resources/templates/login.html
+++ b/week-07/day5/src/main/resources/templates/login.html
@@ -12,9 +12,9 @@
 
     <h1>Welcome to Programmer Fox Club!</h1>
     <p>Please provide a name, so you can associate it to your pet!</p>
-    <form>
-        <label for="namefield">Name</label>
-        <input type="text" id="namefield">
+    <form action="#" th:action="@{/login}"  method="post">
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name">
         <input type="submit" value="GO">
     </form>
 
