add nutritionstore endpoint

--- a/week-07/day5/src/main/resources/templates/index.html
+++ b/week-07/day5/src/main/resources/templates/index.html
@@ -11,6 +11,9 @@
 
     <ul>
         <li> Information </li>
+        <li> Nutrition Store </li>
+        <li> Trick Center </li>
+        <li> Action History</li>
     </ul>
 
     <br>
