--- a/week-07/day5/src/main/resources/templates/index.html
+++ b/week-07/day5/src/main/resources/templates/index.html
@@ -10,10 +10,10 @@
 <body>
 
     <ul>
-        <li> Information </li>
-        <li> Nutrition Store </li>
-        <li> Trick Center </li>
-        <li> Action History</li>
+        <a href="/"> <li> Information </li> </a>
+        <a href="/nutritionStore"> <li> Nutrition Store </li> </a>
+        <a href="/trickCenter"><li> Trick Center </li> </a>
+        <a href="/actionHistory"> <li> Action History</li> </a>
     </ul>
 
     <br>
