--- a/week-07/day5/src/main/resources/templates/login.html
+++ b/week-07/day5/src/main/resources/templates/login.html
@@ -9,7 +9,13 @@
 </head>
 <body>
 
-
+    <ul>
+        <a href="/"> <li> Information </li> </a>
+        <a href="/nutritionStore"> <li> Nutrition Store </li> </a>
+        <a href="/trickCenter"><li> Trick Center </li> </a>
+        <a href="/actionHistory"> <li> Action History</li> </a>
+    </ul>
+    <br>
     <h1>Welcome to Programmer Fox Club!</h1>
     <p>Please provide a name, so you can associate it to your pet!</p>
     <form action="#" th:action="@{/login}"  method="post">
