change first link

--- a/week-07/day5/src/main/resources/templates/login.html
+++ b/week-07/day5/src/main/resources/templates/login.html
@@ -10,7 +10,7 @@
 <body>
 
     <ul>
-        <a href="/"> <li> Information </li> </a>
+        <a href="/login"> <li> Information </li> </a>
         <a href="/nutritionStore"> <li> Nutrition Store </li> </a>
         <a href="/trickCenter"><li> Trick Center </li> </a>
         <a href="/actionHistory"> <li> Action History</li> </a>
