add FoxController class

--- a/week-07/day5/src/main/resources/templates/nutritionStore.html
+++ b/week-07/day5/src/main/resources/templates/nutritionStore.html
@@ -10,7 +10,17 @@
 <body>
 
 
+<form>
+    <label>Food</label>
+    <select>
 
+    </select>
+    <label>Drink</label>
+    <select>
+
+    </select>
+    <input type="submit" value="Change">
+</form>
 
 </body>
 </html>
