--- a/week-07/day6/src/main/resources/templates/inhabitant_info.html
+++ b/week-07/day6/src/main/resources/templates/inhabitant_info.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+
+<span th:if="${error}" th:text="${error}"></span>
+<div th:unless="${error}" th:object="${inhabitant_by_id}">
+    <h1 th:text="*{name}"></h1>
+    <h1 th:text="*{age}"></h1>
+    <h1 th:text="*{gender}"></h1>
+
+</div>
+
 </body>
 </html>
