--- a/week-08/day1/connectwithmysql/src/main/resources/templates/todolist.html
+++ b/week-08/day1/connectwithmysql/src/main/resources/templates/todolist.html
@@ -2,15 +2,32 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Todo list</title>
+    <title>Todo CRUD app</title>
+    <link rel="stylesheet" href="../styles.css" type="text/css">
 </head>
 <body>
 
 <h1>Todos for today:</h1>
 
-<ul th:each="todo : ${todos}">
-    <li th:text="${todo.title}"></li>
-</ul>
+<a th:href="@{/todo/add}">Add new todo</a>
+
+<table>
+    <thead>
+        <th>ID</th>
+        <th>Action</th>
+        <th>Urgent</th>
+        <th>Done</th>
+    </thead>
+    <tr th:each="todo : ${todos}">
+        <td th:text="${todo.id}"></td>
+        <td th:text="${todo.title}"></td>
+        <td th:text="${todo.urgent}"></td>
+        <td th:text="${todo.done}"></td>
+        <td><a th:href="@{'/todo/' + ${todo.id} + '/delete'}">delete</a></td>
+        <td><a th:href="@{'/todo/' + ${todo.id} + '/edit'}">edit</a></td>
+    </tr>
+
+</table>
 
 </body>
 </html>
