add saerch field to template

--- a/week-08/day3/todoextended/src/main/resources/templates/todolist.html
+++ b/week-08/day3/todoextended/src/main/resources/templates/todolist.html
@@ -14,6 +14,15 @@
     <input type="submit" value="add">
 </form>
 
+
+<form action="#" th:action="@{/todo/search}" method="post">
+    <label for="search"><h2>Search</h2></label>
+    <input type="search" id="search" name="search"/>
+    <input type="submit" value="Search"/>
+</form>
+
+<br>
+
 <table>
     <thead>
 
