create form in newpost template

--- a/week-08/day4/src/main/resources/templates/newpost.html
+++ b/week-08/day4/src/main/resources/templates/newpost.html
@@ -10,5 +10,17 @@
         Submit a new post
     </h1>
 
+    <form action="#" th:action="@{/add}" method="post" th:object="${post}">
+
+        <label for="title" th:text="'Title: '"></label>
+        <input type="text" name="title" id="title" th:field="*{title}">
+
+        <label for="url" th:text="'URL: '"></label>
+        <input type="url" name="url" id="url" th:field="*{url}">
+
+        <input type="submit" value="Submit">
+
+    </form>
+
 </body>
 </html>
