--- a/week-08/day4/src/main/resources/templates/index.html
+++ b/week-08/day4/src/main/resources/templates/index.html
@@ -15,9 +15,9 @@
     <table>
         <tr th:each="post : ${posts}">
             <td th:text="${post.votes}"></td>
-            <td><a th:href="@{${post.id} + '/upvote'}">+</a></td>
-            <td><a th:href="@{${post.id} + '/downvote'}">-</a></td>
-            <td><a th:text="${post.title}"></a></td>
+            <td><a th:href="@{'/' +${post.id} + '/upvote'}">+</a></td>
+            <td><a th:href="@{'/' +${post.id} + '/downvote'}">-</a></td>
+            <td><a th:text="${post.title}" th:href="@{${post.url}}"></a></td>
         </tr>
     </table>
 
