--- a/week-08/day4/src/main/resources/templates/index.html
+++ b/week-08/day4/src/main/resources/templates/index.html
@@ -18,6 +18,7 @@
             <td><a th:href="@{'/' +${post.id} + '/upvote'}">+</a></td>
             <td><a th:href="@{'/' +${post.id} + '/downvote'}">-</a></td>
             <td><a th:text="${post.title}" th:href="@{${post.url}}"></a></td>
+            <td th:text="${post.createdAt}"></td>
         </tr>
     </table>
 
