change path to new post

--- a/week-08/day4/src/main/resources/templates/index.html
+++ b/week-08/day4/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<a th:href="@{/add}">Submit new post</a>
+<a th:href="@{/submit}">Submit new post</a>
 
     <h2>
         Trending posts
