--- a/week-08/day4/src/main/resources/templates/index.html
+++ b/week-08/day4/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
             <td th:text="${post.votes}"></td>
             <td><a th:href="@{'/' +${post.id} + '/upvote'}">+</a></td>
             <td><a th:href="@{'/' +${post.id} + '/downvote'}">-</a></td>
-            <td><a th:text="${post.title}" th:href="@{${post.url}}"></a></td>
+            <td><a th:text="${post.title}" th:href="@{${post.url}}" target="_blank"></a></td>
             <td th:text="${post.createdAt}"></td>
         </tr>
     </table>
