Fox Club project - add nutrition.html

--- a/week-07/day5/src/main/resources/templates/nutritionStore.html
+++ b/week-07/day5/src/main/resources/templates/nutritionStore.html
@@ -8,15 +8,20 @@
 
 </head>
 <body>
-
+    <ul>
+        <a href="/login"> <li> Information </li> </a>
+        <a href="/nutritionStore"> <li> Nutrition Store </li> </a>
+        <a href="/trickCenter"><li> Trick Center </li> </a>
+        <a href="/actionHistory"> <li> Action History</li> </a>
+    </ul>
 
 <form>
     <label>Food</label>
-    <select>
+    <select name="food">
 
     </select>
     <label>Drink</label>
-    <select>
+    <select name="drink">
 
     </select>
     <input type="submit" value="Change">
