Fox Club project - add fox service

--- a/week-07/day5/src/main/resources/templates/nutritionStore.html
+++ b/week-07/day5/src/main/resources/templates/nutritionStore.html
@@ -18,11 +18,17 @@
 <form>
     <label>Food</label>
     <select name="food">
-
+        <option value="chocolate">Chocolate</option>
+        <option value="apple">Apple</option>
+        <option value="strawberry">Strawberry</option>
+        <option value="rabbit">Rabbit</option>
     </select>
     <label>Drink</label>
     <select name="drink">
-
+        <option value="water">Water</option>
+        <option value="tea">Tea</option>
+        <option value="lemnade">Lemonade</option>
+        <option value="rum">Rum</option>
     </select>
     <input type="submit" value="Change">
 </form>
