move nutritionStore endpoints to FoxController, modify index template

--- a/week-07/day5/src/main/resources/templates/index.html
+++ b/week-07/day5/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
 
     <ul>
         <a href="#"> <li> Information </li> </a>
-        <a href="/nutritionStore"> <li> Nutrition Store </li> </a>
+        <a th:href="@{'/nutritionStore?name=' + ${fox.name}}"> <li> Nutrition Store </li> </a>
         <a href="/trickCenter"><li> Trick Center </li> </a>
         <a href="/actionHistory"> <li> Action History</li> </a>
     </ul>
