Fox Club - modify action history link in all templates

--- a/week-07/day5/src/main/resources/templates/index.html
+++ b/week-07/day5/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
         <a href="#"> <li> Information </li> </a>
         <a th:href="@{'/nutritionStore?name=' + ${fox.name}}"> <li> Nutrition Store </li> </a>
         <a th:href="@{'/trickCenter?name=' + ${fox.name}}"><li> Trick Center </li> </a>
-        <a th:href="@{'/actionHistory?name=' + ${fox.name}}"> <li> Action History</li> </a>
+        <a href="#"> <li> Action History</li> </a>
     </ul>
 
     <br>
