--- a/week-07/day5/src/main/resources/templates/register.html
+++ b/week-07/day5/src/main/resources/templates/register.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+
 </head>
 <body>
-$END$
+
+<ul>
+    <a href="/login"> <li> Information </li> </a>
+    <a href="/nutritionStore"> <li> Nutrition Store </li> </a>
+    <a href="/trickCenter"><li> Trick Center </li> </a>
+    <a href="/actionHistory"> <li> Action History</li> </a>
+</ul>
+<br>
+<h1>Welcome to Programmer Fox Club!</h1>
+<p>Choose a username, and get your own pet!</p>
+<form action="#" th:object="${user}" th:action="@{/register}"  method="post">
+    <label for="userName">Username</label>
+    <input type="text" id="userName" name="userName" th:field="*{userName}">
+    <label for="password">Password</label>
+    <input type="password" id="password" name="password" th:field="*{password}">
+    <label for="confirmPassword">Confirm your password</label>
+    <input type="password" id="confirmPassword" name="confirmPassword" th:field="*{confirmPassword}">
+    <input type="submit" value="Sign up">
+</form>
+
 </body>
 </html>
