--- a/week-07/day5/src/main/resources/templates/nutritionStore.html
+++ b/week-07/day5/src/main/resources/templates/nutritionStore.html
@@ -10,12 +10,12 @@
 <body>
     <ul>
         <a href="/login"> <li> Information </li> </a>
-        <a th:href="@{'/nutritionStore?name=' + ${currentFox.name}}"> <li> Nutrition Store </li> </a>
-        <a th:href="@{'/trickCenter?name=' + ${currentFox.name}}"><li> Trick Center </li> </a>
+        <a th:href="@{'/nutritionStore?id=' + ${currentFox.id}}"> <li> Nutrition Store </li> </a>
+        <a th:href="@{'/trickCenter?id=' + ${currentFox.id}}"><li> Trick Center </li> </a>
         <a href="#"> <li> Action History</li> </a>
     </ul>
 
-<form action="#" th:action="@{'/nutritionStore?name=' + ${currentFox.name}}" method="post">
+<form action="#" th:action="@{'/nutritionStore?id=' + ${currentFox.id}}" method="post">
     <label>Food</label>
     <select name="food">
         <option value="chocolate">Chocolate</option>
@@ -27,7 +27,7 @@
     <select name="drink">
         <option value="water">Water</option>
         <option value="tea">Tea</option>
-        <option value="lemnade">Lemonade</option>
+        <option value="lemonade">Lemonade</option>
         <option value="rum">Rum</option>
     </select>
     <input type="submit" value="Change">
