--- a/week-07/day5/src/main/resources/templates/trickcenter.html
+++ b/week-07/day5/src/main/resources/templates/trickcenter.html
@@ -10,12 +10,12 @@
 <body>
 <ul>
     <a href="/login"> <li> Information </li> </a>
-    <a th:href="@{'/nutritionStore?name=' + ${currentFox.name}}"> <li> Nutrition Store </li> </a>
-    <a th:href="@{'/trickCenter?name=' + ${currentFox.name}}"><li> Trick Center </li> </a>
+    <a th:href="@{'/nutritionStore?id=' + ${currentFox.id}}"> <li> Nutrition Store </li> </a>
+    <a th:href="@{'/trickCenter?id=' + ${currentFox.id}}"><li> Trick Center </li> </a>
     <a href="#"> <li> Action History</li> </a>
 </ul>
 
-<form action="#" th:action="@{'/trickCenter?name=' + ${currentFox.name}}" method="post">
+<form action="#" th:action="@{'/trickCenter?id=' + ${currentFox.id}}" method="post">
     <label>Tricks</label>
     <select name="trick">
         <option value="learn HTML">Learn HTML</option>
